--- a/package.json
+++ b/package.json
@@ -44,10 +44,14 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.13.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.0",
-    "prettier": "^2.6.2"
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.10",
+    "tailwindcss": "^3.0.24"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
