--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "jotai": "^1.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.37.0",
     "react-scripts": "5.0.1",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.6.3",
